--- a/index.html
+++ b/index.html
@@ -3,13 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <title>Hakhathon</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="navbar"></div>
+    <div class="navbar">
+      <a
+        href="https://www.google.com/maps/d/viewer?mid=1B1lAsUpYFg82Je7XN1_cxRPf1UU&hl=en_US&ll=42.87691909523991%2C74.59186095000003&z=12"
+        >БИШКЕК</a
+      >
+      <p>ДОСТАВКА</p>
+      <button id="btn">Индивидуальный дизайн</button>
+      <p>Заказ часов</p>
+      <div class="dropdown">
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Горячая линия
+        </button>
+        <ul class="dropdown-menu">
+          <li>8-800-444-777-3</li>
+          <li>+7 (985) 381-40-36</li>
+        </ul>
+      </div>
+
+      <p>Вход / регистрация</p>
+      <p>корзина</p>
+      <p>Поиск</p>
+    </div>
     <div class="body"></div>
     <div class="footer"></div>
     <script src="./js/main.js"></script>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
