--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     />
   </head>
   <body>
+    <!-- navbar starts -->
     <div class="navbar">
       <a
         href="https://www.google.com/maps/d/viewer?mid=1B1lAsUpYFg82Je7XN1_cxRPf1UU&hl=en_US&ll=42.87691909523991%2C74.59186095000003&z=12"
@@ -52,12 +53,21 @@
           <li>+7 (985) 381-40-36</li>
         </ul>
       </div>
-
       <p>Вход / регистрация</p>
       <p>корзина</p>
       <p>Поиск</p>
     </div>
+    <!-- navbar ends -->
 
+    <div class="logo">
+      <h3>Бренд</h3>
+      <h3>Каталог</h3>
+      <img src="./picture/unnamed.jpg" alt="" />
+      <h3>Магазин</h3>
+      <h3>Сервис</h3>
+    </div>
+
+    <!-- carousel starts -->
     <div class="carousel">
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
@@ -145,8 +155,7 @@
         </button>
       </div>
     </div>
-
-
+    <!-- carousel ends -->
     <div class="body"></div>
 
     <div class="footer"></div>
