--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <!-- navbar ends -->
 
     <div class="logo">
-      <h3>Бренд</h3>
-      <h3>Каталог</h3>
+      <a href="#brand"><h3>Бренд</h3></a>
+      <a href="./katalog.html"><h3>Каталог</h3></a>
       <img src="./picture/unnamed.jpg" alt="" />
       <h3>Магазин</h3>
       <h3>Сервис</h3>
@@ -155,8 +155,9 @@
         </button>
       </div>
     </div>
-
-    <div class="body">
+    <!-- carousel ends -->
+    <!-- block info starts -->
+    <div id="body">
       <h3 id="brand">БРЕНД</h3>
       <p>О нас</p>
       <br />
@@ -184,12 +185,8 @@
           </p>
         </div>
       </div>
-
-      <p></p>
     </div>
-    <!-- carousel ends -->
-    <div class="body"></div>
-
+    <!-- block info ends -->
     <div class="footer"></div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
