--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         href="https://www.google.com/maps/d/viewer?mid=1B1lAsUpYFg82Je7XN1_cxRPf1UU&hl=en_US&ll=42.87691909523991%2C74.59186095000003&z=12"
         >БИШКЕК</a
       >
-      <p>ДОСТАВКА</p>
+      <p>Доставка</p>
       <button id="btn">Индивидуальный дизайн</button>
       <p>Заказ часов</p>
       <div class="dropdown">
@@ -55,13 +55,13 @@
       </div>
       <p>Вход / регистрация</p>
       <p>корзина</p>
-      <p>Поиск</p>
+      <p class="seach">Поиск</p>
     </div>
     <!-- navbar ends -->
 
     <div class="logo">
-      <a href="#brand"><h3>Бренд</h3></a>
-      <a href="./katalog.html"><h3>Каталог</h3></a>
+      <h3>Бренд</h3>
+      <h3>Каталог</h3>
       <img src="./picture/unnamed.jpg" alt="" />
       <h3>Магазин</h3>
       <h3>Сервис</h3>
@@ -155,28 +155,8 @@
         </button>
       </div>
     </div>
-    <!-- carousel ends -->
-    <div class="whatches">
-      <img
-        src="https://nikawatches.ru/upload/images/main/exclusive_main.svg"
-        alt=""
-      />
-      <img
-        src="https://nikawatches.ru/upload/images/main/for_her_main.svg"
-        alt=""
-      />
-      <img
-        src="https://nikawatches.ru/upload/images/main/for_him_main.svg"
-        alt=""
-      />
-      <img
-        src="https://nikawatches.ru/upload/images/main/mystery_main.svg"
-        alt=""
-      />
-    </div>
 
-    <!-- block info starts -->
-    <div id="body">
+    <div class="body">
       <h3 id="brand">БРЕНД</h3>
       <p>О нас</p>
       <br />
@@ -204,6 +184,8 @@
           </p>
         </div>
       </div>
+
+      <p></p>
     </div>
     <!-- carousel ends -->
     <div class="body"></div>
@@ -245,8 +227,6 @@
         />
       </div>
     </div>
-    <!-- block info ends -->
-    <div class="footer"></div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="./js/main.js"></script>
