--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
       <h3>Магазин</h3>
       <h3>Сервис</h3>
     </div>
+    <div class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- carousel starts -->
     <div class="carousel">
@@ -192,7 +220,7 @@
 
     <div class="footer">
       <div class="left">
-        <h3 class="text-2">ОФИЦИАЛЬНЫЕ КАНАЛЫ</h3>
+        <h3 class="text-2">НАШИ СТРАНИЧКИ</h3>
         <a href="https://vk.com/nikawatches"><img src="" alt="" />Вконтакте</a>
         <a href="https://ok.ru/group/50975225282643"
           ><img src="" alt="" />Одноклассники</a
