--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         src="https://nikawatches.ru/upload/images/main/mystery_main.svg"
         alt=""
       />
+      <h2>qwerty</h2>
     </div>
 
     <!-- block info starts -->
