--- a/katalog.html
+++ b/katalog.html
@@ -17,7 +17,7 @@
       <div class="silver">СЕРЕБРЯНЫЕ ЧАСЫ</div>
     </div>
 
-    <div class="card"></div>
+    <div class="main-card"></div>
     <script src="./js/main.js"></script>
   </body>
 </html>
