--- a/katalog.html
+++ b/katalog.html
@@ -11,10 +11,10 @@
       <h3><a href="./index.html">Главная</a></h3>
     </div>
     <div class="category">
-      <div class="woman">ЖЕНСКИЕ ЧАСЫ</div>
-      <div class="man">МУЖСКИЕ ЧАСЫ</div>
-      <div class="gold">ЗОЛОТЫЕ ЧАСЫ</div>
-      <div class="silver">СЕРЕБРЯНЫЕ ЧАСЫ</div>
+      <button id="woman" class="btn-filter">ЖЕНСКИЕ ЧАСЫ</button>
+      <button id="man" class="btn-filter">МУЖСКИЕ ЧАСЫ</button>
+      <button id="gold" class="btn-filter">ЗОЛОТЫЕ ЧАСЫ</button>
+      <button id="silver" class="btn-filter">СЕРЕБРЯНЫЕ ЧАСЫ</button>
     </div>
 
     <div class="main-card"></div>
