--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p class="seach">Поиск</p>
     </div>
     <!-- navbar ends -->
-
+    <!-- logo starts -->
     <div class="logo">
       <a href="#brand"><h3>Бренд</h3></a>
       <a href="./katalog.html"><h3>Каталог</h3></a>
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-
+    <!-- logo ends -->
     <!-- carousel starts -->
     <div class="carousel">
       <div id="carouselExample" class="carousel slide">
@@ -172,7 +172,7 @@
       </div>
     </div>
     <!-- carousel ends -->
-
+    <!-- detail whatches starts -->
     <div class="whatches">
       <img
         src="https://nikawatches.ru/upload/images/main/exclusive_main.svg"
@@ -191,7 +191,7 @@
         alt=""
       />
     </div>
-
+    <!-- detail whatches ends -->
     <!-- block info starts -->
     <div id="body">
       <h3 id="brand">БРЕНД</h3>
@@ -223,9 +223,9 @@
       </div>
     </div>
     <!-- block info ends -->
+
+    <!-- footer starts -->
     <div class="footer"></div>
-    <!-- carousel ends -->
-    <div class="body"></div>
 
     <div class="footer">
       <div class="left">
@@ -263,7 +263,9 @@
           alt=""
         />
       </div>
+      <!-- footer ends -->
     </div>
+
     <script src="./js/main.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
