--- a/katalog.html
+++ b/katalog.html
@@ -18,6 +18,10 @@
     </div>
 
     <div class="main-card"></div>
+    <div class="pagination">
+      <button class="btn-pagination"><<<</button>
+      <button class="btn-pagination">>>></button>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
